java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting/ReferenceToImplicitClass.java
<error descr="Implicitly declared class 'ReferenceToImplicitClass' cannot be referenced">ReferenceToImplicitClass</error> a;

public static void main(String[] args) {
  Class<<error descr="Implicitly declared class 'ReferenceToImplicitClass' cannot be referenced">ReferenceToImplicitClass</error>> stringClass = <error descr="Implicitly declared class 'ReferenceToImplicitClass' cannot be referenced">ReferenceToImplicitClass</error>.class;
}
